--- a/cw2/style.css
+++ b/cw2/style.css
@@ -13,21 +13,22 @@ body{
     height: 10vh;
     border-radius: 10px;
     font-family: cursive;
-    border: 10px solid;
+    border: 8px solid;
 }
 
 #subtitle{
     display: flex;
-    justify-content: space-evenly;
-    padding: 10%;
+    justify-content: space-around;
+    align-items: center;
+    height: 40vh;
     background-color: lightgray;
     border-radius: 15px;
     border: 5px solid; 
 }
 
 #subtitle div img{
-    max-width: 80px;
-    max-height: 80px;
+    max-width: 100px;
+    max-height: 100px;
     border: 3px dotted;
 }
 .gif{
@@ -36,19 +37,26 @@ body{
 
 }
 
-#content{
+.content{
     display: flex;
-    justify-content:center;
+    justify-content:space-evenly;
     font-size: xx-large;
     font-family: fantasy;
     padding: 5%;
-    gap: 10rem;
+    flex-wrap: wrap;
+    background-color: lightslategrey;
+    border-radius: 5px;
+    border: 2px solid;
 }
 
-#content div img{
+
+.content div img{
     max-width: 30vw;
     max-height: 30vh;
-    border: 1px groove;
+}
+
+.opis{
+
 }
 
 #footer{
