--- a/cw2/style.css
+++ b/cw2/style.css
@@ -51,12 +51,14 @@ body{
 
 
 .content div img{
-    max-width: 30vw;
-    max-height: 30vh;
+    max-width: 35vw;
+    max-height: 35vh;
 }
 
 .opis{
-
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-style: italic;
+    font-size: 3vh;
 }
 
 #footer{
