--- a/cw4/style.css
+++ b/cw4/style.css
@@ -29,8 +29,10 @@ body{
     border: 3px ridge;
     background-color: antiquewhite;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font: weight 300px; ;
+    font: weight 300px;
     z-index: 2;
+    font-size: 5vh;
+
 }
 
 .zdjecia{
@@ -41,7 +43,6 @@ body{
     justify-content: space-around;
     align-items: center;
     padding:10px;
-    position:relative
   }
   
   .zdjecia div{
@@ -54,12 +55,14 @@ body{
     width:40vw;
     height:40vw;
     position:relative;
-    
+}
+
+.img div{
+    position:absolute;
 }
 
 .rewers{
-    background-color: #e0e0e0;
-    border-radius: 30px;
+    background-color: green;
     display:flex;
     justify-content: center;
     align-items: center;
@@ -95,5 +98,6 @@ body{
     width: 100%;
     background-color: black;
     color: white;
-
+    font-family: fantasy;
+    font-weight: 250;
   }
