--- a/cw4/style.css
+++ b/cw4/style.css
@@ -62,16 +62,18 @@ body{
 }
 
 .rewers{
-    background-color: green;
+    background-color: #fff;
     display:flex;
     justify-content: center;
     align-items: center;
     transition: 1s;
+    transition-delay: 3s;
   }
   .rewers:active{
+    transition: .01s;
+    transition-delay: 0s;
     opacity:0;
   }
-
   .awers1{
     background-image: url(https://github.com/apietryga/kurs-Front-end/blob/master/materialy/lekcja2/cw2/slon.jpg?raw=true);
     background-size: cover;
