--- a/cw5/css/style.css
+++ b/cw5/css/style.css
@@ -3,9 +3,12 @@ body{
   }
   .headerek{
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-      font-weight: bold;
+      font-weight: bolder;
+      font-size: xx-large;
       display:flex;
       justify-content: flex-start;
+      padding-top: 1%;
+      padding-left: 4%;
   }
   a{
     text-decoration: none;
@@ -34,6 +37,7 @@ body{
     text-decoration:solid;
   }
   .wrapperek{
+    padding: 10%;  
     display:grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
