--- a/cw6/style.scss
+++ b/cw6/style.scss
@@ -1,4 +1,18 @@
-*{box-sizing: border-box;}
+$borderek-radius: 10px;
+$border-stylek: ridge 3px black;
+
+
+
+@media (max-width: 720px) {
+    .container {
+      flex-direction: column;
+    }
+  }
+
+*{
+    box-sizing: border-box;
+
+}
 body{
     /* Background pattern from Toptal Subtle Patterns */
     background-image: url(img/chevron.png);
@@ -15,19 +29,32 @@ body{
 .navbar{
     display:flex;
     justify-content: space-evenly;
-    text-decoration: none;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     border:ridge 3px black;
+    border-radius: $borderek-radius;
+    background: linear-gradient(white, #dfbebe);
+    justify-content: space-evenly;
+    box-shadow: 2px 2px 5px #000;
+    position: sticky;
+    top: 0;
+}
+a{
+    text-decoration: none;
+    &:hover {
+         background-color: rgb(255, 255, 255);
+    }
+
 }
 
 .container{
     display: flex;
     justify-content:center;
-    align-items: center;
+    align-items: flex-start;
     padding: 5%;
     border: ridge 2px black;
     border-radius: 10px;
-    margin-top: 5px;
+    margin: 5%;
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ;
 }
 
 .content{
@@ -36,9 +63,18 @@ body{
 
 .polecane{
     flex:1;
-
+    margin-left: 1vw;
+    h4{
+        display: flex;
+        align-content: center;
+        justify-content: center;
+    }
+    div{
+        border: $border-stylek;
+        border-radius: $borderek-radius;
+        margin: 3%;
+    }
 }
-
 
 .articleJpg{
     background-image: url(img/article.jpg);
@@ -46,25 +82,65 @@ body{
     min-width: 20vw;
     background-repeat: no-repeat;
     background-position: center;
+    background-size: cover;
+    border: $border-stylek;
+    border-radius: $borderek-radius;
+    box-shadow: 2px 2px 5px #000;
+    margin:3%;
 }
+
+.comments{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: 500;
+    margin-left: 5vw;
+
+    div{
+    display: flex;
+    padding: 1%;
+    border: $border-stylek;
+    border-radius: $borderek-radius;
+    margin: 1%;
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ;
+    }
+    .pole-input{
+        flex:1;
+    }
+
+    .usercomment{
+
+       
+    }
+    .ikonka{
+        font-size: xx-large;
+    }
+
+    .pole-oldcomment{
+        flex:1;
+    }
+}
+
 
 
 .socials{
     display: flex;
-    justify-items: center;
-    align-items: center;
+    justify-content: space-evenly;
+    align-items:center;
     font-size: xx-large;
-    border: ridge 2px black;
-    border-radius: 10px;
+    border: $border-stylek;
+    border-radius: $borderek-radius;
+    a{
+        text-decoration: none;
+        border:ridge;
+        border-radius: 10px;
+     }
 }
 
-
-
-.socials a{
-    text-decoration: none;
-}
-
-.footer{
+footer{
     display: flex;
-
+    text-align: end;
+    justify-content: flex-end;
+    font-family:monospace;
+    border: $border-stylek;
+    border-radius: $borderek-radius;
+    margin:2%;
 }
